--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,30 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+<style>
+        h1{text-align: center;font-size: 45px;text-shadow: 0 1px white;}
+        section{
+            text-align: center;
+            margin: auto;
+            padding: 350px 0;
+            transition: all .5s;
+        }
+        button{
+            border: none;
+            background-color: tomato;
+            padding: 15px;
+            border-radius: 5px;
+            font-size: 18px;
+            font-weight: 800;
+            color: white;
+            cursor: pointer;
+        }
+        button:hover{
+            background-color: brown;
+        }
+        
